后台管理添加机构功能

--- a/src/Gateway/ThingsGateway.Gateway.Razor/Pages/Config/Channel/ChannelEditComponent.razor
+++ b/src/Gateway/ThingsGateway.Gateway.Razor/Pages/Config/Channel/ChannelEditComponent.razor
@@ -54,7 +54,7 @@
 
             </FieldItems>
             <Buttons>
-                <Button ButtonType="ButtonType.Submit" Icon="fa-solid fa-floppy-disk" IsAsync Text=@DefaultLocalizer["Save"] />
+                <Button ButtonType="ButtonType.Submit" Icon="fa-solid fa-floppy-disk" IsAsync Text=@RazorLocalizer["Save"] />
             </Buttons>
         </EditorForm>
 
