--- a/src/Gateway/ThingsGateway.Gateway.Razor/Pages/Config/Plugin/SavePlugin.razor
+++ b/src/Gateway/ThingsGateway.Gateway.Razor/Pages/Config/Plugin/SavePlugin.razor
@@ -18,7 +18,7 @@
         </div>
     </div>
     <div class="form-footer">
-        <Button Text="@DefaultLocalizer["Save"]" ButtonType="@ButtonType.Submit" />
+        <Button Text="@RazorLocalizer["Save"]" ButtonType="@ButtonType.Submit" />
     </div>
 </ValidateForm>
 
