--- a/src/Gateway/ThingsGateway.Gateway.Razor/Pages/Config/Variable/VariableEditComponent.razor
+++ b/src/Gateway/ThingsGateway.Gateway.Razor/Pages/Config/Variable/VariableEditComponent.razor
@@ -40,7 +40,7 @@
                                 <EditorItem @bind-Field="@context.DeviceId">
                                     <EditTemplate Context="value">
                                         <div class="col-12  col-md-6">
-                                            <Select IsVirtualize @bind-Value="@value.DeviceId" Items="@CollectDevices" ShowSearch="true" OnSelectedItemChanged="OnDeviceSelectedItemChanged" IsPopover />
+                                            <Select IsVirtualize @bind-Value="@value.DeviceId" Items="@CollectDevices" ShowSearch="true" OnSelectedItemChanged="OnDeviceSelectedItemChanged"  />
                                         </div>
                                     </EditTemplate>
                                 </EditorItem>
@@ -52,7 +52,7 @@
                                 <EditorItem @bind-Field="@context.OtherMethod">
                                     <EditTemplate Context="value">
                                         <div class="col-12  col-md-6">
-                                            <Select IsVirtualize @bind-Value="@value.OtherMethod" Items="@OtherMethods" ShowSearch="true" IsPopover />
+                                            <Select IsVirtualize @bind-Value="@value.OtherMethod" Items="@OtherMethods" ShowSearch="true"  />
                                         </div>
                                     </EditTemplate>
                                 </EditorItem>
@@ -118,7 +118,7 @@
                 </Tab>
                 <div class="form-footer">
 
-                    <Button class="mt-2" ButtonType="ButtonType.Submit" Icon="fa-solid fa-floppy-disk" IsAsync Text=@DefaultLocalizer["Save"] />
+                    <Button class="mt-2" ButtonType="ButtonType.Submit" Icon="fa-solid fa-floppy-disk" IsAsync Text=@RazorLocalizer["Save"] />
                 </div>
             </ValidateForm>
 
@@ -156,7 +156,7 @@ else
                             <EditorItem @bind-Field="@context.DeviceId">
                                 <EditTemplate Context="value">
                                     <div class="col-12  col-md-6">
-                                        <Select IsVirtualize @bind-Value="@value.DeviceId" Items="@CollectDevices" ShowSearch="true" OnSelectedItemChanged="OnDeviceSelectedItemChanged" IsPopover />
+                                        <Select IsVirtualize @bind-Value="@value.DeviceId" Items="@CollectDevices" ShowSearch="true" OnSelectedItemChanged="OnDeviceSelectedItemChanged"  />
                                     </div>
                                 </EditTemplate>
                             </EditorItem>
@@ -168,7 +168,7 @@ else
                             <EditorItem @bind-Field="@context.OtherMethod">
                                 <EditTemplate Context="value">
                                     <div class="col-12  col-md-6">
-                                        <Select IsVirtualize @bind-Value="@value.OtherMethod" Items="@OtherMethods" ShowSearch="true" IsPopover />
+                                        <Select IsVirtualize @bind-Value="@value.OtherMethod" Items="@OtherMethods" ShowSearch="true"  />
                                     </div>
                                 </EditTemplate>
                             </EditorItem>
@@ -235,7 +235,7 @@ else
 
                             <div class="col-12 col-md-8">
                                 <label required="true" style="width:20%">@Localizer["ChoiceBusinessDeviceId"]</label>
-                                <Select SkipValidate IsVirtualize @bind-Value="@ChoiceBusinessDeviceId" Items="@BusinessDevices" ShowSearch="true" ShowLabel="false" IsPopover />
+                                <Select SkipValidate IsVirtualize @bind-Value="@ChoiceBusinessDeviceId" Items="@BusinessDevices" ShowSearch="true" ShowLabel="false"  />
                             </div>
                             <div class="col-12 col-md-4">
                                 <Button OnClick="() => RefreshBusinessPropertyClickAsync(ChoiceBusinessDeviceId)">@Localizer["RefreshBusinessProperty"]</Button>
