--- a/src/Gateway/ThingsGateway.Gateway.Razor/Pages/Config/Channel/ChannelPage.razor
+++ b/src/Gateway/ThingsGateway.Gateway.Razor/Pages/Config/Channel/ChannelPage.razor
@@ -8,14 +8,25 @@
 @inherits ComponentDefault
 
 
-<div style="height: var(--table-height);padding: 2px 5px 10px 5px;">
+<div style="height: var(--table-height);padding: 1px;margin:auto;">
 
-    <AdminTable @ref=table TItem="Channel" AutoGenerateColumns="true" ShowAdvancedSearch=false
-                AllowResizing="true" IsFixedHeader=true IsMultipleSelect=true SearchModel=SearchModel
+    <AdminTable @ref=table TItem="Channel"
+                AutoGenerateColumns="true"
+                ShowAdvancedSearch=false
+                AllowResizing="true"
+                IsFixedHeader=true
+                IsMultipleSelect=true
+                SearchModel=SearchModel
+                EditDialogSize="Size.ExtraLarge"
+                ShowSearch="false"
                 ShowExtendButtons=true
-                ShowDefaultButtons=true ExtendButtonColumnWidth=150 ShowExportButton="true"
-                OnQueryAsync="OnQueryAsync" IsPagination=true
-                OnSaveAsync="Save" OnDeleteAsync="Delete">
+                ShowDefaultButtons=true
+                ExtendButtonColumnWidth=150
+                ShowExportButton="true"
+                OnQueryAsync="OnQueryAsync"
+                IsPagination=true
+                OnSaveAsync="Save"
+                OnDeleteAsync="Delete">
 
         <EditTemplate Context="context">
             <ChannelEditComponent Model="context"></ChannelEditComponent>
@@ -24,18 +35,18 @@
         <ExportButtonDropdownTemplate Context="ExportContext">
             <Button class="dropdown-item" OnClick="() => ExcelExportAsync(ExportContext)" IsDisabled=@(!AuthorizeButton("导出"))>
                 <i class="fas fa-file-export"></i>
-                <span>@DefaultLocalizer["TablesExportButtonExcelText"]</span>
+                <span>@GatewayLocalizer["TablesExportButtonExcelText"]</span>
             </Button>
             <Button class="dropdown-item" OnClick="() => ExcelImportAsync(ExportContext)" IsDisabled=@(!AuthorizeButton("导入"))>
                 <i class="fas fa-file-import"></i>
-                <span>@DefaultLocalizer["TablesImportButtonExcelText"]</span>
+                <span>@GatewayLocalizer["TablesImportButtonExcelText"]</span>
             </Button>
         </ExportButtonDropdownTemplate>
 
         <TableToolbarTemplate>
             <TableToolbarButton TItem="Channel" IsShow=@(AuthorizeButton(AdminOperConst.Edit))
-                                          Color=Color.Info Text="@DefaultLocalizer["BatchEdit"]"
-                                 OnClickCallback=@(BatchEdit) />
+                                Color=Color.Info Text="@RazorLocalizer["BatchEdit"]"
+                                OnClickCallback=@(BatchEdit) />
 
             <TableToolbarPopConfirmButton TItem="Channel" IsShow=@(AuthorizeButton("清空"))
                                           Color=Color.Warning Text="@Localizer["Clear"]"
