--- a/src/Gateway/ThingsGateway.Gateway.Razor/Pages/Config/Device/DeviceEditComponent.razor
+++ b/src/Gateway/ThingsGateway.Gateway.Razor/Pages/Config/Device/DeviceEditComponent.razor
@@ -34,7 +34,7 @@
                     <EditTemplate Context="value">
                         <div class="col-12  col-md-6 ">
                             <BootstrapInputGroup>
-                                <Select IsVirtualize @bind-Value="@value.ChannelId" Items="@Channels" ShowSearch="true" ShowLabel="true" IsPopover />
+                                <Select IsVirtualize @bind-Value="@value.ChannelId" Items="@Channels" ShowSearch="true" ShowLabel="true"  />
                                 <Button class="text-end" Icon="fa-solid fa-plus" OnClick="AddChannel"></Button>
                             </BootstrapInputGroup>
                         </div>
@@ -45,7 +45,7 @@
                         <div class="col-12  col-md-6">
                             <Select @bind-Value="@value.PluginName"
                                     Items="@PluginNames" OnSelectedItemChanged=OnPluginNameChanged
-                                    ShowSearch="true" IsPopover>
+                                    ShowSearch="true" >
                                 <ItemTemplate Context="name">
                                     @if (PluginDcit.TryGetValue(name.Value, out var pluginOutput))
                                     {
@@ -86,7 +86,7 @@
                         <div class="col-12  col-md-6">
                             <Select IsVirtualize @bind-Value="@value.RedundantDeviceId" style="width:100%"
                                     OnQueryAsync="OnRedundantDevicesQuery"
-                                    ShowSearch="true" IsPopover IsClearable OnClearAsync=@(()=>
+                                    ShowSearch="true"  IsClearable OnClearAsync=@(()=>
                                 {
                                 value.RedundantDeviceId = default;
                                 return Task.CompletedTask;
@@ -125,7 +125,7 @@
             </FieldItems>
 
             <Buttons>
-                <Button ButtonType="ButtonType.Submit" Icon="fa-solid fa-floppy-disk" IsAsync Text=@DefaultLocalizer["Save"] />
+                <Button ButtonType="ButtonType.Submit" Icon="fa-solid fa-floppy-disk" IsAsync Text=@RazorLocalizer["Save"] />
             </Buttons>
 
         </EditorForm>
@@ -163,7 +163,7 @@ else
                         <EditTemplate Context="value">
                             <div class="col-12  col-md-6 ">
                                 <BootstrapInputGroup>
-                                    <Select IsVirtualize @bind-Value="@value.ChannelId" Items="@Channels" ShowSearch="true" ShowLabel="true" IsPopover />
+                                    <Select IsVirtualize @bind-Value="@value.ChannelId" Items="@Channels" ShowSearch="true" ShowLabel="true"  />
                                     <Button class="text-end" Icon="fa-solid fa-plus" OnClick="AddChannel"></Button>
                                 </BootstrapInputGroup>
                             </div>
@@ -174,7 +174,7 @@ else
                             <div class="col-12  col-md-6">
                                 <Select @bind-Value="@value.PluginName"
                                         Items="@PluginNames" OnSelectedItemChanged=OnPluginNameChanged
-                                        ShowSearch="true" IsPopover>
+                                        ShowSearch="true" >
                                     <ItemTemplate Context="name">
                                         @if (PluginDcit.TryGetValue(name.Value, out var pluginOutput))
                                         {
@@ -215,7 +215,7 @@ else
                             <div class="col-12  col-md-6">
                                 <Select IsVirtualize @bind-Value="@value.RedundantDeviceId" style="width:100%"
                                         OnQueryAsync="OnRedundantDevicesQuery"
-                                        ShowSearch="true" IsPopover IsClearable OnClearAsync=@(()=>
+                                        ShowSearch="true"  IsClearable OnClearAsync=@(()=>
                                     {
                                     value.RedundantDeviceId = default;
                                     return Task.CompletedTask;
