--- a/src/Gateway/ThingsGateway.Gateway.Razor/Pages/Config/Plugin/PluginPage.razor
+++ b/src/Gateway/ThingsGateway.Gateway.Razor/Pages/Config/Plugin/PluginPage.razor
@@ -10,15 +10,25 @@
 @inherits ComponentDefault
 
 
-<div style="height: var(--table-height);padding: 2px 5px 10px 5px;">
-    <AdminTable @ref=table TItem="PluginOutput" AutoGenerateColumns="true" ShowDefaultButtons=false
-                AllowResizing="true" IsFixedHeader=true IsMultipleSelect=false
-                ShowExtendEditButton=false ShowExtendDeleteButton=false ShowExtendButtons=false
-                ShowExportButton="true" ShowAdvancedSearch=false SearchModel=SearchModel
+<div style="height: var(--table-height);padding: 1px;margin:auto;">
+    <AdminTable @ref=table TItem="PluginOutput"
+                AutoGenerateColumns="true"
+                ShowDefaultButtons=false
+                EditDialogSize="Size.Large"
+                AllowResizing="true"
+                IsFixedHeader=true
+                ShowSearch="false"
+                IsMultipleSelect=false
+                ShowExtendEditButton=false
+                ShowExtendDeleteButton=false
+                ShowExtendButtons=false
+                ShowExportButton="true"
+                ShowAdvancedSearch=false
+                SearchModel=SearchModel
                 OnQueryAsync="OnQueryAsync">
 
         <TableToolbarTemplate>
-            <TableToolbarButton TItem="PluginOutput" Color="Color.Info" Icon="fa fa-plus" Text="@DefaultLocalizer["Add"]"
+            <TableToolbarButton TItem="PluginOutput" Color="Color.Info" Icon="fa fa-plus" Text="@RazorLocalizer["Add"]"
                                 OnClickCallback="OnAdd" IsShow=@(AuthorizeButton("添加")) />
 
         </TableToolbarTemplate>
@@ -42,7 +52,7 @@
         <ExportButtonDropdownTemplate Context="ExportContext">
             <div class="dropdown-item" @onclick="() => ExcelExportAsync(ExportContext)" IsDisabled=@(!AuthorizeButton("导出"))>
                 <i class="fas fa-file-export"></i>
-                <span>@DefaultLocalizer["TablesExportButtonExcelText"]</span>
+                <span>@RazorLocalizer["TablesExportButtonExcelText"]</span>
             </div>
         </ExportButtonDropdownTemplate>
     </AdminTable>
