--- a/src/ThingsGateway.Server/Program/MainLayout.razor.css
+++ b/src/ThingsGateway.Server/Program/MainLayout.razor.css
@@ -105,6 +105,8 @@
     --bb-layout-header-height: 44px;
     --bb-layout-headerbar-background: transparent;
     --bs-navbar-color: var(--bb-layout-header-color);
+    --bb-layout-header-color: var(--bs-body-color);
+    --bb-layout-title-color: var(--bs-body-color);
     --bs-navbar-hover-color: var(--bs-primary);
     --bb-layout-header-background: var(--tg-nav-bg);
     --bb-layout-sidebar-background: var(--tg-nav-bg);
@@ -113,6 +115,8 @@
     --bb-layout-banner-font-size: 1.2rem;
     --bb-layout-banner-logo-width: 36px;
     --bb-layout-banner-logo-height: 36px;
+    --bb-layout-banner-border-color: var(--tg-nav-bg);
+    --bb-layout-header-border-color: var(--tg-nav-bg);
     --line-chart-height: 350px;
     --bb-layout-body-height: calc(100vh - var(--bs-header-height) - var(--bb-layout-header-height) - 20px);
     --line-chart-table-height: calc(100vh - var(--bs-header-height) - var(--bb-layout-header-height) - var(--line-chart-height) - 30px);
@@ -120,7 +124,7 @@
     --bs-header-height: 30px;
 }
 
-.mainlayout ::deep .dropdown-logout {
+.mainlayout ::deep .layout-header .dropdown-logout {
     --bb-logout-avatar-width: 32px;
     --bb-logout-avatar-height: 32px;
     --bb-logout-user-bg: rgba(52,58,64,0.7);
