修复双机热备功能，添加日志显示

--- a/src/Foundation/ThingsGateway.Foundation.Razor/DebugPages/LogConsole.razor
+++ b/src/Foundation/ThingsGateway.Foundation.Razor/DebugPages/LogConsole.razor
@@ -20,7 +20,7 @@
 
     </HeaderTemplate>
     <BodyTemplate>
-        <div style=@($"height:{HeightText};overflow-y:scroll")>
+        <div style=@($"height:{HeightString};overflow-y:scroll")>
             <Virtualize Items="CurrentMessages??new  List<LogMessage>()" Context="itemMessage" ItemSize="60" OverscanCount=2>
                 <ItemContent>
               @*       <Tooltip Placement="Placement.Bottom" Title=@itemMessage.Message.Substring(0, Math.Min(itemMessage.Message.Length, 500))> *@
