更新種子數據

--- a/src/ThingsGateway.Server/Pages/_Host.cshtml
+++ b/src/ThingsGateway.Server/Pages/_Host.cshtml
@@ -29,6 +29,11 @@
     <link rel="stylesheet" href="_content/BootstrapBlazor/css/motronic.min.css" />
     <link rel="stylesheet" href="ThingsGateway.Server.styles.css" />
     <link rel="stylesheet" href=@($"{WebsiteConst.DefaultResourceUrl}css/site.css") />
+
+    <link rel="stylesheet" href="/_content/ThingsGateway.Blazor.Diagrams/blazor-diagram.css" />
+    <link rel="stylesheet" href="/_content/ThingsGateway.Blazor.Diagrams/diagram.css" />
+    <link rel="stylesheet" href="/_content/ThingsGateway.Gateway.Razor/styles.css" />
+
     @* <script src=@($"{WebsiteConst.DefaultResourceUrl}js/theme.js") type="module"></script><!-- 初始主题 --> *@
     <!-- PWA Manifest -->
     <link rel="manifest" href="./manifest.json" />
@@ -46,6 +51,7 @@
     
     <script src="_content/BootstrapBlazor/js/bootstrap.blazor.bundle.min.js"></script>
     <script src=@($"{WebsiteConst.DefaultResourceUrl}js/culture.js")></script>
+    <script src="/_content/ThingsGateway.Blazor.Diagrams/diagram.js"></script>
     <script src="_framework/blazor.server.js"></script>
 
        <!-- PWA Service Worker -->
