--- a/src/ThingsGateway.Server/Pages/_Host.cshtml
+++ b/src/ThingsGateway.Server/Pages/_Host.cshtml
@@ -30,9 +30,8 @@
     <link rel="stylesheet" href="ThingsGateway.Server.styles.css" />
     <link rel="stylesheet" href=@($"{WebsiteConst.DefaultResourceUrl}css/site.css") />
 
-    <link rel="stylesheet" href="/_content/ThingsGateway.Blazor.Diagrams/blazor-diagram.css" />
     <link rel="stylesheet" href="/_content/ThingsGateway.Blazor.Diagrams/diagram.css" />
-    <link rel="stylesheet" href="/_content/ThingsGateway.Gateway.Razor/styles.css" />
+    <link rel="stylesheet" href="/_content/ThingsGateway.RulesEngine/style.css" />
 
     @* <script src=@($"{WebsiteConst.DefaultResourceUrl}js/theme.js") type="module"></script><!-- 初始主题 --> *@
     <!-- PWA Manifest -->
