--- a/src/ThingsGateway.Server/Index/GatewayIndex.razor
+++ b/src/ThingsGateway.Server/Index/GatewayIndex.razor
@@ -12,7 +12,7 @@
 
 <div class="row g-2 mx-1 form-inline">
 
-    <div class="col-12  col-md-6 sh">
+    <div class="col-12  col-md-6">
 
         <Card IsShadow=true class="m-2 flex-fill" Color="Color.Primary">
             <HeaderTemplate>
@@ -28,7 +28,7 @@
         </Card>
     </div>
 
-    <div class="col-12  col-md-6 sh">
+    <div class="col-12  col-md-6">
 
         <Card IsShadow=true class="m-2 flex-fill">
             <HeaderTemplate>
@@ -45,7 +45,7 @@
 
 <div class="row g-2 mx-1 form-inline">
 
-    <div class="col-12  col-md-6 sh">
+    <div class="col-12  col-md-6">
 
         <Card IsShadow=true class="m-2 flex-fill">
             <HeaderTemplate>
@@ -58,7 +58,7 @@
         </Card>
     </div>
 
-    <div class="col-12  col-md-6 sh">
+    <div class="col-12  col-md-6">
 
         <Card IsShadow=true class="m-2 flex-fill">
             <HeaderTemplate>
@@ -74,7 +74,7 @@
 </div>
 
 <div class="row g-2 mx-1 form-inline">
-    <div class="col-12  col-md-12 sh">
+    <div class="col-12  col-md-12">
         <Card IsShadow=true class="m-2 flex-fill" Color="Color.Primary">
             <HeaderTemplate>
                 @Localizer["HardwareInfoChart"]
