--- a/src/Foundation/ThingsGateway.Foundation.Razor/DebugPages/AdapterDebugComponent.razor
+++ b/src/Foundation/ThingsGateway.Foundation.Razor/DebugPages/AdapterDebugComponent.razor
@@ -1,8 +1,8 @@
 ﻿@using Microsoft.AspNetCore.Components.Web;
 @using Microsoft.JSInterop;
+@using ThingsGateway.Core.Json.Extension
 @using ThingsGateway.Extension
 @using ThingsGateway.Foundation
-@using ThingsGateway.Foundation.Json.Extension
 @using BootstrapBlazor.Components
 @namespace ThingsGateway.Debug
 @inherits AdapterDebugBase
