--- a/src/ThingsGateway.Server/Layout/MainLayout.razor
+++ b/src/ThingsGateway.Server/Layout/MainLayout.razor
@@ -23,6 +23,9 @@
 
 @inject NavigationManager NavigationManager
 
+@if(AppContext.CurrentUser!=null&&AppContext.OwnMenus!=null)
+{
+
 <LoginConnectionHub />
 <CascadingValue Value="ReloadMenu" Name="ReloadMenu" IsFixed="true">
     <CascadingValue Value="ReloadUser" Name="ReloadUser" IsFixed="true">
@@ -95,9 +98,9 @@
                 </Main>
                 <NotAuthorized>
                     <Redirect Url="/Account/Login"/>
-                </NotAuthorized>
+                 </NotAuthorized>
             </Layout>
-
+    
             @if(AppContext.IsHasButtonWithRole("", "重启"))
             {
                 <ThingsGateway.Gateway.Razor.QuickActions/>
@@ -108,3 +111,4 @@
     </CascadingValue>
 </CascadingValue>
 
+}
