迁移重启后台按钮到设备状态页面

--- a/src/Gateway/ThingsGateway.Gateway.Razor/Pages/Runtime/DeviceStatus/DeviceStatusPage.razor
+++ b/src/Gateway/ThingsGateway.Gateway.Razor/Pages/Runtime/DeviceStatus/DeviceStatusPage.razor
@@ -18,3 +18,7 @@
         <DeviceStatus Channels=Channels Devices=BusinessDevices Plugins=Plugins DeviceQuery="BusinessDeviceQuery" DeviceHostedService=@GlobalData.BusinessDeviceHostedService DriverBases="BusinessBases"></DeviceStatus>
     </TabItem>
 </Tab>
+@if (AuthorizeButton("重启"))
+{
+      <ThingsGateway.Gateway.Razor.QuickActions/>
+}
