--- a/src/Gateway/ThingsGateway.Gateway.Razor/Pages/Config/Device/ScriptCheck.razor
+++ b/src/Gateway/ThingsGateway.Gateway.Razor/Pages/Config/Device/ScriptCheck.razor
@@ -3,26 +3,26 @@
 @using ThingsGateway.Admin.Razor
 @using ThingsGateway.Gateway.Application
 
-<div class="me-4">
-<div class="col-12  col-md-12">
+<div class="row me-4">
+<div class="col-12  col-md-6">
 
     <BootstrapLabel Value=@Localizer["Script"] ShowLabelTooltip="true" />
     <CodeEditor ShowLineNo Value=@Script ValueChanged=@Change Language="csharp" Theme="vs-dark" />
 
 </div>
-<div class="col-12  col-md-12">
+<div class="col-6  col-md-3">
     <BootstrapLabel Value=@Localizer["Input"] ShowLabelTooltip="true" />
     <CodeEditor ShowLineNo @bind-Value=@Input Language="csharp" Theme="vs-dark" />
 
 </div>
-<div class="col-12  col-md-12">
+<div class="col-6  col-md-3">
     <BootstrapLabel Value=@Localizer["Output"] ShowLabelTooltip="true" />
     <CodeEditor ShowLineNo @bind-Value=@Output Language="csharp" Theme="vs-dark" />
 
+    </div>
 </div>
-<div class="col-12  col-md-12">
+<div class="text-start">
     <Button IsAsync OnClick="CheckScript" class="  mt-3">
         @Localizer["Check"]
     </Button>
-    </div>
 </div>
