增加规则引擎插件

--- a/src/Gateway/ThingsGateway.Gateway.Razor/Pages/Runtime/RealAlarmPage.razor
+++ b/src/Gateway/ThingsGateway.Gateway.Razor/Pages/Runtime/RealAlarmPage.razor
@@ -101,7 +101,10 @@
 
     </AdminTable>
 </div>
-
+@if (AuthorizeButton("重启"))
+{
+          <ThingsGateway.Gateway.Razor.QuickActions/>
+}
 @code {
     AdminTable<VariableRunTime> table;
 }
