--- a/src/Gateway/ThingsGateway.Gateway.Razor/Pages/Config/Device/BusinessPropertyWithCacheIntervalScriptRazor.razor
+++ b/src/Gateway/ThingsGateway.Gateway.Razor/Pages/Config/Device/BusinessPropertyWithCacheIntervalScriptRazor.razor
@@ -6,9 +6,16 @@
 @using ThingsGateway.Gateway.Application
 @namespace ThingsGateway.Gateway.Razor
 
-<ValidateForm Model="Model.PluginPropertyModel.Value" @ref=Model.PluginPropertyModel.ValidateForm Id="@Model.Id.ToString()">
 
-    <EditorFormObject class="p-2" Items=PluginPropertyEditorItems AutoGenerateAllItem="false" RowType=RowType.Inline ItemsPerRow=2 ShowLabelTooltip=true LabelWidth=250 Model="Model.PluginPropertyModel.Value" @key=Model.PluginPropertyModel.Value.GetType().TypeHandle.Value>
+<ValidateForm Model="Model.PluginPropertyModel.Value" 
+@key=@($"DeviceEditValidateForm{Model.Id}{Model.PluginPropertyModel.Value.GetType().TypeHandle.Value}")
+
+@ref=Model.PluginPropertyModel.ValidateForm 
+Id=@($"DeviceEditValidateForm{Model.Id}{Model.PluginPropertyModel.Value.GetType().TypeHandle.Value}")
+>
+
+    <EditorFormObject class="p-2" Items=PluginPropertyEditorItems AutoGenerateAllItem="false" RowType=RowType.Inline ItemsPerRow=2 ShowLabelTooltip=true LabelWidth=250 Model="Model.PluginPropertyModel.Value" @key=@($"DeviceEditEditorFormObject{Model.Id}{Model.PluginPropertyModel.Value.GetType().TypeHandle.Value}")
+>
 
         <FieldItems>
             @if (Model.PluginPropertyModel.Value is BusinessPropertyWithCacheIntervalScript businessProperty)
